# stream-chat-rust

./: .gitignore  Cargo.toml  README.md
src/: client.rs  endpoints.rs  lib.rs
src/models/: api_error.rs  create_device_request.rs  device.rs  device_error_info.rs  device_fields.rs  device_request.rs  list_devices_response.rs  mod.rs  response.rs  user_object_request.rs
