[package]
name = "stream_chat_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
jsonwebtoken = {version = "8", default-features = false }

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
futures = "0.3"
tokio = {version = "1.20", features = ["rt", "macros"] }